--- a/src/pages/signup/SignUp.css
+++ b/src/pages/signup/SignUp.css
@@ -6,6 +6,7 @@
   background-color: white;
   padding: 24px;
   width: 100%;
+  height: 100vh;
 }
 
 .ImageCard {
